@@ -71,20 +71,20 @@ class NetzkeController < ApplicationController
     error=false
     if params['_json'] # this is a batched request
       params['_json'].each do |batch|
-        result+= result.blank? ? '[' : ', '
+        result += result.blank? ? '[' : ', '
         begin
-          result+=invoke_endpoint batch[:act], batch[:method].underscore, batch[:data], batch[:tid]
+          result += invoke_endpoint(batch[:act], batch[:method].underscore, batch[:data].first, batch[:tid])
         rescue Exception  => e
           Rails.logger.error "!!! Netzke: Error invoking endpoint: #{batch[:act]} #{batch[:method].underscore} #{batch[:data].inspect} #{batch[:tid]}\n"
           Rails.logger.error e.message
-          Rails.logger.error e.backtrace
+          Rails.logger.error e.backtrace.join("\n")
           error=true
           break;
         end
       end
       result+=']'
     else # this is a single request
-      result=invoke_endpoint params[:act], params[:method].underscore, params[:data], params[:tid]
+      result=invoke_endpoint params[:act], params[:method].underscore, params[:data].first, params[:tid]
     end
     render :text => result, :layout => false, :status => error ? 500 : 200
   end
@@ -96,43 +96,32 @@ class NetzkeController < ApplicationController
 
   protected
 
-    def invoke_endpoint component_name, action, data, tid
-      data=data[0] || {} # we get data as an array, extract the single argument if available
+    def invoke_endpoint(endpoint_path, action, params, tid)
+      component_name, *sub_components = endpoint_path.split('__')
+      component_instance = Netzke::Base.instance_by_config(Netzke::Core.session[:netzke_components][component_name.to_sym])
 
-      root_component_name, *sub_components = component_name.split('__')
-      root_component = Netzke::Base.instance_by_config Netzke::Core.session[:netzke_components][root_component_name.to_sym]
-      if sub_components.empty?
-        # we need to dispatch to root component, send it _#{action}_ep_wrapper
-        endpoint_action = "_#{action}_ep_wrapper"
-      else
-        # we need to dispatch to one or more sub_components, send subcomp__subsubcomp__endpoint to root component
-        endpoint_action = sub_components.join('__')+'__'+action
-      end
-      # send back JSON as specified in Ext.direct spec
-      #  => type: rpc
-      #  => tid, action, method as in the request, so that the client can mark the transaction and won't retry it
-      #  => result: JavaScript code from he endpoint result which gets applied to the client-side component instance
-      result = root_component.send(endpoint_action, data)
+      result = component_instance.invoke_endpoint([*sub_components, action].join("__"), params)
 
-      {:type => "rpc", :tid => tid, :action => component_name, :method => action, :result => result.present? && result.l || {}}.to_json
+      {
+        :type => "rpc",
+        :tid => tid,
+        :action => component_name,
+        :method => action,
+        :result => result.present? && result.l || {}
+      }.to_json
     end
 
     # Main dispatcher of old-style (Sencha Touch) HTTP requests. The URL contains the name of the component,
     # as well as the method of this component to be called, according to the double underscore notation.
     # E.g.: some_grid__post_grid_data.
-    def endpoint_dispatch(method_name)
-      component_name, *action = method_name.to_s.split('__')
-      component_name = component_name.to_sym
-      action = !action.empty? && action.join("__").to_sym
+    def endpoint_dispatch(endpoint_path)
+      component_name, *sub_components = endpoint_path.split('__')
+      component_instance = Netzke::Base.instance_by_config(Netzke::Core.session[:netzke_components][component_name.to_sym])
 
-      if action
-        w_instance = Netzke::Base.instance_by_config(Netzke::Core.session[:netzke_components][component_name])
-        # only component's actions starting with "endpoint_" are accessible from outside (security)
-        endpoint_action = action.to_s.index('__') ? action : "_#{action}_ep_wrapper"
-        render :text => w_instance.send(endpoint_action, params), :layout => false
-      else
-        super
-      end
+      # We render text/plain, so that the browser never modifies our response
+      response.headers["Content-Type"] = "text/plain; charset=utf-8"
+
+      render :text => component_instance.invoke_endpoint(sub_components.join("__"), params), :layout => false
     end
 
     # Generates initial javascript code that is dependent on Rails environement
@@ -144,7 +133,6 @@ class NetzkeController < ApplicationController
       res << %{Netzke.RelativeUrlRoot = '#{ActionController::Base.config.relative_url_root}';}
       res << %{Netzke.RelativeExtUrl = '#{ActionController::Base.config.relative_url_root}/extjs';}
 
-      # TODO: this will needs some DRYing
       res << %{Netzke.core.directMaxRetries = '#{Netzke::Core.js_direct_max_retries}';}
 
       res.join("\n")
