@@ -15,7 +15,7 @@ Ext.state.Provider.prototype.set = function(){};
   }
 })();
 
-Netzke.classes.NetzkeRemotingProvider=Ext.extend(Ext.direct.RemotingProvider,{
+Netzke.classes.NetzkeRemotingProvider = Ext.extend(Ext.direct.RemotingProvider, {
   getCallData: function(t){
     return {
       act: t.action, // rails doesn't really support having a parameter named "action"
@@ -130,7 +130,6 @@ Ext.apply(Netzke.classes.Core.Mixin, {
 
     Ext.each(endpoints, function(intp){
       directActions.push({"name":intp.camelize(true), "len":1});
-      //this[intp.camelize(true)] = function(args, callback, scope){ this.callServer(intp, args, callback, scope); }
       this[intp.camelize(true)] = function(arg, callback, scope) {
         Netzke.runningRequests++;
         scope=scope || that;
