@@ -283,7 +283,7 @@ module Netzke
         res[:components] = comp_hash unless comp_hash.empty?
 
         # Endpoints (besides the default "deliver_component" - JavaScript side already knows about it)
-        endpoints = self.class.registered_endpoints - [:deliver_component]
+        endpoints = self.class.endpoints.keys - [:deliver_component]
         res[:endpoints] = endpoints unless endpoints.empty?
 
         # Inform the JavaScript side if persistent_config is enabled
