@@ -41,5 +41,7 @@ module RailsApp
 
     # Configure sensitive parameters which will be filtered from the log file.
     config.filter_parameters += [:password]
+
+    # config.netzke.core.direct_max_retries = 2
   end
 end
